# concurrency_in_action

./: .clang-format  .gitignore  CMakeLists.txt  concurrent_queue.hpp  consumer_action_busy_wait.hpp  main.cpp  mutex_queue_with_2_locks.hpp  mutex_queue_with_big_lock.hpp
queue/: CMakeLists.txt  concurrent_queue.hpp  consumer_action_busy_wait.hpp  consumer_action_idle_wait.hpp  main.cpp  mutex_queue_with_2_locks.hpp  mutex_queue_with_big_lock.hpp  node.hpp
swap_buffers/: CMakeLists.txt  swap_buffers.cpp
swap_buffers/lock_based/: lock_based_swap_buffer.hpp
